# realkey

./: .gitmodules  CONTRIBUTING.md  README.md  config-no-pkg.json  config.json  desmo_key.step  index.html  key3d.js  main.css  main.py  memolis_change_key.step  mini-coi.js  model_view.js  pyproject.toml  worker.py
resources/: realkey.stl
resources/SargentAndGreenleaf/: 60.step  87H.step  96.step  9609.step  SY3B.step
resources/VSR/: 2000-1-1.step
src/realkey/: ASSA.py  DOM.py  MIWA.py  Opnus.py  Paclock.py  SargentAndGreenleaf.py  Schlage.py  __main__.py  assa.py  dom.py  follower.py  geom_tools.py  key.py  key_cutters.py  miwa.py  opnus.py  paclock.py  realkey.py  realkey_web.py  sargentandgreenleaf.py  schlage.py  tab.py  tab_follower.py  tab_key.py  vsr.py  web_core.py  web_main.py
src/realkey/ASSA/: ASSA.py  __init__.py
src/realkey/Common/: __init__.py  key.py  key_cutters.py
src/realkey/MIWA/: MIWA.py
src/realkey/Opnus/: Opnus.py  __init__.py
src/realkey/Paclock/: Paclock.py  __init__.py
src/realkey/SargentAndGreenleaf/: SargentAndGreenleaf.py
