[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "realkey"
version = "0.0.1"
authors = [
    {name = "Steven Goldade", email = "smgoldade@gmail.com"}
]
description = "A library for the generation of 3D models of various keys, oriented towards 3D printing of those keys."
readme = "README.md"
requires-python = ">= 3.13, < 3.15"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "build123d == 0.10.0",
    "ocp_vscode == 3.3.4"
]